// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> with and clicks the card feature 1`] = `
<div
  class="card__Group-s87lnr-2 eqsXHQ"
>
  <div
    class="card__Container-s87lnr-1 bXGGHr"
  >
    <p
      class="card__Title-s87lnr-0 jKOXfe"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-3 eIZgGz"
    >
      <div
        class="card__Item-s87lnr-7 hDzbZC"
        data-testid="tiger-king-testid"
      >
        <img
          class="card__Image-s87lnr-8 cWYycC"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-4 cKCXxn"
        >
          <p
            class="card__SubTitle-s87lnr-5 eifFOc"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-6 cqvlwl"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 bXGGHr"
  >
    <p
      class="card__Title-s87lnr-0 jKOXfe"
    >
      Children
    </p>
    <div
      class="card__Entities-s87lnr-3 eIZgGz"
    >
      <div
        class="card__Item-s87lnr-7 hDzbZC"
        data-testid="hotel-transylvania-testid"
      >
        <img
          class="card__Image-s87lnr-8 cWYycC"
          src="/images/series/children/hotel-transylvania/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-4 cKCXxn"
        >
          <p
            class="card__SubTitle-s87lnr-5 eifFOc"
          >
            Hotel Transylvania
          </p>
          <p
            class="card__Text-s87lnr-6 cqvlwl"
          >
            Hotel Transylvania description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-s87lnr-2 eqsXHQ"
>
  <div
    class="card__Container-s87lnr-1 bXGGHr"
  >
    <p
      class="card__Title-s87lnr-0 jKOXfe"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-3 eIZgGz"
    >
      <div
        class="card__Item-s87lnr-7 hDzbZC"
      >
        <img
          class="card__Image-s87lnr-8 cWYycC"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-4 cKCXxn"
        >
          <p
            class="card__SubTitle-s87lnr-5 eifFOc"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-6 cqvlwl"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 bXGGHr"
  >
    <p
      class="card__Title-s87lnr-0 jKOXfe"
    >
      Children
    </p>
    <div
      class="card__Entities-s87lnr-3 eIZgGz"
    >
      <div
        class="card__Item-s87lnr-7 hDzbZC"
      >
        <img
          class="card__Image-s87lnr-8 cWYycC"
          src="/images/series/children/hotel-transylvania/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-4 cKCXxn"
        >
          <p
            class="card__SubTitle-s87lnr-5 eifFOc"
          >
            Hotel Transylvania
          </p>
          <p
            class="card__Text-s87lnr-6 cqvlwl"
          >
            Hotel Transylvania description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
